# OWLSOL_CLI

./: .gitignore  CICD_SETUP.md  Cargo.toml  README.md  SETUP.sh  make-executable.sh  test_runner.sh
.github/workflows/: autotag.yml  ci.yml  nightly.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: benchmark.rs  compress.rs  decompress.rs  mod.rs  stats.rs
cli/src/ui/: banner.rs  formatter.rs  mod.rs  ratatui_ui.rs
core/: Cargo.toml
core/benches/: compression_bench.rs
core/src/: analyzer.rs  compressor.rs  decompressor.rs  error.rs  lib.rs  metadata.rs  selector.rs
core/src/algorithms/: dictionary.rs  huffman.rs  mod.rs  rle.rs
core/src/utils/: bitstream.rs  mod.rs
scripts/: benchmark-all.sh  benchmark.sh  cleanup.sh  demo.sh  deploy-program.sh  full-demo.sh  generate-solana-accounts.sh  generate-test-data.sh  install.sh  quick-test.sh  run-tests.sh  setup-devnet.sh  test-all-algorithms.sh
scripts/metrics/: ci_metrics.sh  collect_metrics.sh  compression_bench.sh  github_metrics.sh  solana_account_sizes.sh  telemetry_ping.sh
solana/: Cargo.toml
solana-accounts/: amm-pool-state.json  amm-pool-state.json.owlsol  amm-pool-state.json.owlsol.meta.json  amm-pool-state.json.owlsol.meta.json.owlsol  amm-pool-state.json.owlsol.meta.json.owlsol.meta.json  amm-pool-state.json.owlsol.meta.json.owlsol.meta.json.owlsol  amm-pool-state.json.owlsol.meta.json.owlsol.meta.json.owlsol.meta.json  anchor-idl.json  anchor-idl.json.owlsol  anchor-idl.json.owlsol.meta.json  anchor-idl.json.owlsol.meta.json.owlsol  anchor-idl.json.owlsol.meta.json.owlsol.meta.json  candy-machine-config.json  candy-machine-config.json.owlsol  candy-machine-config.json.owlsol.meta.json  candy-machine-config.json.owlsol.meta.json.owlsol  candy-machine-config.json.owlsol.meta.json.owlsol.meta.json  compressed-nft.json  compressed-nft.json.owlsol  compressed-nft.json.owlsol.meta.json  compressed-nft.json.owlsol.meta.json.owlsol  compressed-nft.json.owlsol.meta.json.owlsol.meta.json  governance-proposal.json  governance-proposal.json.owlsol  governance-proposal.json.owlsol.meta.json  governance-proposal.json.owlsol.meta.json.owlsol  governance-proposal.json.owlsol.meta.json.owlsol.meta.json  governance-proposal.json.owlsol.meta.json.owlsol.meta.json.owlsol  governance-proposal.json.owlsol.meta.json.owlsol.meta.json.owlsol.meta.json  jupiter-route.json  jupiter-route.json.owlsol  jupiter-route.json.owlsol.meta.json  jupiter-route.json.owlsol.meta.json.owlsol  jupiter-route.json.owlsol.meta.json.owlsol.meta.json  magic-eden-listing.json  magic-eden-listing.json.owlsol  magic-eden-listing.json.owlsol.meta.json  magic-eden-listing.json.owlsol.meta.json.owlsol  magic-eden-listing.json.owlsol.meta.json.owlsol.meta.json  metaplex-nft.json  (+20 more)
solana/src/: account.rs  client.rs  error.rs  lib.rs
src/: app.rs  lib.rs  main.rs  ui.rs
src/core/: alt_manager.rs  config.rs  fee_optimizer.rs  jupiter.rs  mod.rs  safety.rs  transaction.rs
tests/: integration_test.rs  real_swap_test.rs
tests/edge_cases/: edge_case_tests.rs  mod.rs
tests/integration/: fee_optimizer_integration.rs  jupiter_integration.rs  mod.rs
tests/stress/: mod.rs  stress_tests.rs
tests/unit/: alt_manager_tests.rs  fee_optimizer_tests.rs  jupiter_tests.rs  mod.rs  more_unit_tests.rs  safety_tests.rs  transaction_tests.rs
