[package]
name = "owlsol-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Smart Solana Swap CLI with 30-50% fee optimization"
license = "MIT"

[[bin]]
name = "owlsol"
path = "src/main.rs"

[dependencies]
# Solana Core
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"

# HTTP & JSON
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
bs58 = "0.5"
shellexpand = "3.1"
base64 = "0.22"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
