[workspace]
members = [
    "core",
    "cli",
    "solana"
]
    resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["OWLSOL Team <team@owlsol.com>"]
license = "MIT"

[workspace.dependencies]
comfy-table = "7.1"
dialoguer = "0.11"
console = "0.15"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
proptest = "1.0"
criterion = "0.5"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
indicatif = "0.17"
tempfile = "3.8"
solana-sdk = "1.18.26"
solana-client = "1.18.26"
