[package]
name = "owlsol-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lz4 = "1.24"
zstd = "0.12"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap = { version = "4.5.47", features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "compression_bench"
harness = false
